# prettier-json

./: .gitignore  .pre-commit-config.yaml  README.md  prettier_json.py  pyproject.toml
.github/workflows/: bump-version-on-master.yaml  update-github-wiki.yaml
docs/: CHANGELOG.md
prettier_json/: __init__.py  __main__.py  prettier_json.py
prettierjson/: __main__.py  prettierjson.py
