[tool.poetry]
name = "prettier_json"
version = "0.0.1"
description = "Generate prettier and more compact JSON dumps"
authors = ["Brian Burwell <brianburwell11@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/brianburwell11/prettier-json"
repository = "https://github.com/brianburwell11/prettier-json"
documentation = "https://github.com/brianburwell11/prettier-json/wiki"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
commitizen = "^2.27.1"
cz-github-jira-conventional-footer = "^1.0.2"

[tool.commitizen]
name = "cz_github_jira_conventional_footer"
version = "0.0.1"
tag_format = "$version"
version_files = [
    "README.md",
    "pyproject.toml:version",
    "prettier_json.py:__version__" 
]
jira_base_url = "https://X.atlassian.net"
github_repo = "brianburwell11/prettier-json"
changelog_file = "docs/CHANGELOG.md"
update_changelog_on_bump = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"